--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,8 +14,12 @@ $warn: "pink";
 
 
 .page{
-    background-color: #212121;
+    background-color: #101010;
     height:100vh;
+}
+
+.full-page{
+    height: 100vh;
 }
 
 a.md-tab{
@@ -24,5 +28,43 @@ a.md-tab{
 
 a.md-active{
     color: #fff !important;
-    background-color: lighten(#f44336, 5) !important;
+    background-color: lighten(#f44336, 7) !important;
 }
+
+a.md-focused{
+    color: #fff !important;
+    background-color: lighten(#f44336, 7) !important;
+}
+
+.justify-center{
+    justify-content: center;
+}
+
+.left-tab{
+    background-color: #444;
+    box-shadow: 0px 0px 5px black;
+    z-index:5;
+}
+
+.tab-button{
+    margin:0;
+    height:30px;
+    line-height: 35px;
+    letter-spacing:4px;
+    width:100%;
+}
+
+.align-end{
+    align-self: flex-end;
+}
+
+.fit-image{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 15px;
+}
+
+.content-background{
+    background-color:#aaa;
+}
+
