Made the website resposive :O

--- a/app/templates/app.hbs
+++ b/app/templates/app.hbs
@@ -1,13 +1,11 @@
 
 <div class="layout-row layout-xs-column justify-center">
-    <div class="layout-column flex-xs flex-gt-xs-75 full-page">
-        
-            
+    <div class="layout-column flex-xs flex-sm flex-md flex-gt-md-75 full-page">
                 <div class="layout-row flex">
-                    <div class="flex-gt-xs-10 left-tab">
+                    <div class="flex-xs-30 flex-sm-20 flex-md-15 flex-gt-md-15 left-tab">
                         <div class="logo-section">
                             <a href={{href-to "app.home"}} onClick={{action "selectRoute" "app.home"}}>
-                            <img src="assets/images/logo@4x.png" class="fit-image">
+                            <img src="assets/images/Logo.svg" class="fit-image">
                             </a>
                             <div class="md-headline logo-head">Off Brand Hell</div>
                             {{!--<div class="md-subhead logo-subhead">A Game Company</div>--}}
@@ -36,7 +34,7 @@
                         
                     </div>
 
-                    <div id="content" class="flex-gt-xs-90 content-background route-content">
+                    <div id="content" class="flex-xs-70 flex-gt-xs-85 content-background route-content">
                         {{liquid-outlet class="md-padding"}}
                     </div>
             </div>
