--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -20,6 +20,8 @@ $warn: "pink";
 body {
   background-color: #101010;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .full-page{
@@ -77,13 +79,21 @@ body {
 }
 
 .content-background{
+    overflow-y: auto;
+    overflow-x: hidden;
     background-color:#bbb;
 }
 
 .logo-head{
     text-align: center;
-    font-size: 1.2vw;;
+    font-size: 1.5em;
     font-family: Colourbars;
+}
+
+@media screen and (max-width: 599px) {
+    .logo-head{
+        display:none;
+    }
 }
 
 .logo-subhead{
@@ -110,6 +120,12 @@ body {
 
 .icon-padding{
     padding-left: 5px;
+}
+
+@media screen and (max-width: 350px) {
+    .icon-padding{
+        display:none;
+    }
 }
 
 .route-content{
@@ -148,7 +164,11 @@ body {
 }
 
 .profile-toolbar{
-    height: 175px;
+    height: 150px;
+}
+
+.dialog-size{
+    max-height: 85vh;
 }
 
 .circular-square {
@@ -192,12 +212,43 @@ body {
     background: linear-gradient(135deg, #330033 0%, purple 100%);
 }
 
+.mmoore-color{
+    background: linear-gradient(135deg, #CCCCFF 0%, #7C7CFF 100%);
+}
+.sgargiulo-color{
+    background: linear-gradient(135deg, #00C9D3 0%, #008080 100%);
+}
+
+.sdreisbach-color{
+    background: linear-gradient(135deg, #F9A318 0%, #F25218 100%);
+}
+
+.jlipinski-color{
+    background: linear-gradient(135deg, #003B6F 0%, #00133F 100%);   
+}
+
+.cbelser-color{
+    background: linear-gradient(135deg, #008F9B 0%, #00C9C9 100%);   
+}
+
+.clucas_color{
+    background: linear-gradient(135deg, #873754 0%, #491E2D 100%);       
+}
+
+.nnam_color{
+    background: linear-gradient(135deg, #92FF63 0%, #71A500 100%);           
+}
 
 /*******************/
 
+
+.graphs{
+    padding: 1em 0em;
+}
+
 /*year-graph component*/
 .year-wrapper{
-    margin: 0px -5px;
+    margin: 0px -1px;
 }
 .year-container{
     padding: 0px 5px;
@@ -208,14 +259,20 @@ body {
     
 }
 
+.grid-tile-footer{
+    background-color: rgba(0,0,0,0.4);
+}
+
 .year-fill{
     background: linear-gradient(135deg, #2cb0e0 1%,#2cccdd 100%);
-    box-shadow:         0 0 5px #2cb0e0;
+    // box-shadow:         0 0 2px #2cb0e0;
+    // border: 2px solid black;
 }
 
 .year-nofill{
     background: linear-gradient(135deg, #2cb0e0 1%,#2cccdd 100%);
-    opacity: 0.5;
+    opacity: 0.3;
+    // border: 2px solid black;
 }
 
 /******/
@@ -247,3 +304,56 @@ body {
     font-size: 1.5em;
     padding: 5px;
 }
+
+
+/*coffee slider component*/
+
+.coffee-slider-component{
+    height: calc(100% - 30px);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0px;
+}
+.coffee-slider{
+    height: 80%;
+    width: 8px;
+    border-radius: 4px;
+    background: linear-gradient(to bottom, #e0ad4e 1%,#662c00 100%);
+    align-self: center;
+    margin: 0px 0px;
+    position: relative;
+}
+
+.coffee-icon{
+    width:100%;
+    height: 30%;
+}
+
+.coffee-circle{
+    z-index:10;
+    background-color: black;
+    position:absolute;
+    width:16px;
+    height:16px;
+    border-radius:8px;
+    left:-4px;
+}
+
+/****/
+
+.title{
+    font-size: 1em;
+    font-weight:bold;
+    padding: 8px 0px;
+}
+
+h3.lessmargin{
+    margin:0px 0px 5px 0px;
+}
+
+
+
+
+
+/*****/
