--- a/app/templates/app/team.hbs
+++ b/app/templates/app/team.hbs
@@ -4,7 +4,7 @@
     <div id="route-header">The Team</div>
 
     {{#paper-grid-list
-        cols="1 md-2 gt-md-5"
+        cols="1 sm-2 md-4 gt-md-4"
         rowHeight="gt-md-1:1 2:2"
         gutter="12px gt-sm-16px" as |grid|}}
 
@@ -14,7 +14,7 @@
 
             {{/paper-button}}
             <img src={{profile.pic}} class="fit-image">
-            {{#tile.footer}}
+            {{#tile.footer class="grid-tile-footer"}}
                 <div class="layout-row flex">
                     <div class="flex-initial icon-padding">{{paper-icon profile.icon class="white" size=36}}</div>
                     <div class="layout-column flex">
@@ -27,7 +27,7 @@
             {{/grid.tile}}
 
             {{#if profile.showDialog}}
-                {{#paper-dialog class="flex-25 no-overflow" onClose=(action "closeDialog" profile) parent='#content' origin=(concat '#' profile.id) clickOutsideToClose=true}}
+                {{#paper-dialog class="flex-xs-90 flex-gt-xs-25 no-overflow dialog-size" onClose=(action "closeDialog" profile) parent='#content' origin=(concat '#' profile.id) clickOutsideToClose=true}}
                     {{#paper-toolbar class="profile-toolbar"}}
                         <div class="profile-background {{profile.color}}"></div>
                         {{#paper-toolbar-tools}}
@@ -63,23 +63,33 @@
                                 {{/tabs.tab}}
 
                                 {{#tabs.tab value="stats"}}
-                                Skill
+                                Stats
                                 {{/tabs.tab}}
                             
                             {{/paper-tabs}}
                             {{#paper-dialog-content class="no-padding"}}
                             <div id="liquid-profile">
                             {{#liquid-if (eq selectedProfileTab "aboutme") class="md-padding dynamic-animation" as |current|}}
-                                <h3>My Role</h3>
+                                <h3 class="lessmargin">My Role</h3>
                                     {{profile.myrole}}
-                                <h3>About Me</h3>
+                                <h3 class="lessmargin">About Me</h3>
                                     {{profile.aboutme}}
                             {{else}}
                                 {{year-graph currentyear=profile.currentyear years=profile.years maxyear=profile.maxyear}}
-                                <div class="layout-row">
-                                    <div class="flex-20"></div> 
-                                    <div class="flex-80">
+                                <div class="layout-row layout-wrap graphs">
+                                    <div class="flex-10">
+                                        {{coffee-slider step=profile.coffee min=0 max=4}}    
+                                    </div> 
+                                    <div class="flex-90">
                                         {{pentagon-graph programSkill=profile.programSkill artSkill=profile.artSkill leadSkill=profile.leadSkill comSkill=profile.comSkill orgSkill=profile.orgSkill }}
+                                    </div>
+                                    <div class="flex-100">
+                                        {{!--<div class="title">Skills:</div>--}}
+                                        <h3 class="lessmargin">Skills:</h3>
+                                        
+                                        {{paper-chips
+                                        content=profile.skills
+                                        readOnly=true}}
                                     </div>
                                 </div>
                             {{/liquid-if}}
