--- a/app/templates/components/year-graph.hbs
+++ b/app/templates/components/year-graph.hbs
@@ -1,4 +1,5 @@
-<h3>Years At Drexel University</h3>
+{{!--<div class="title">Collegiate Year:</div>--}}
+<h3 class="lessmargin">Collegiate Year:</h3>
 <div class="layout-row layout-wrap year-wrapper">
     {{#each years as |year|}}
         <div class="year-container {{concat "flex-" (divide 100 maxyear)}}">
