Added some tooltips, fixed the route bug, and created an animatino for the logo

--- a/app/templates/app.hbs
+++ b/app/templates/app.hbs
@@ -5,7 +5,8 @@
                     <div class="flex-xs-30 flex-sm-20 flex-md-15 flex-gt-md-15 left-tab">
                         <div class="logo-section">
                             <a href={{href-to "app.home"}} onClick={{action "selectRoute" "app.home"}}>
-                            <img src="assets/images/Logo.svg" class="fit-image">
+                            {{!--<img src="assets/images/Logo.svg" class="fit-image">--}}
+                            {{logo-svg}}
                             </a>
                             <div class="md-headline logo-head">Off Brand Hell</div>
                             {{!--<div class="md-subhead logo-subhead">A Game Company</div>--}}
