--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -116,6 +116,9 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    top: 0px;
+    left: 0px;
+    box-shadow: 0px 0px 10px #888;
 }
 
 .icon-padding{
@@ -352,8 +355,98 @@ h3.lessmargin{
     margin:0px 0px 5px 0px;
 }
 
-
-
-
-
 /*****/
+
+
+/*Animation on logo*/
+
+.teeth{
+    stroke: #000;
+    fill: #e2e2e2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+.upper-bite{
+    // transform:translate(0);
+    -webkit-animation: upper-bite 500ms ease infinite both;
+    animation: upper-bite 500ms ease infinite both;
+}
+
+.lower-bite{
+    // transform:translate(0);
+    -webkit-animation: lower-bite 500ms ease infinite both;
+    animation: lower-bite 500ms ease infinite both;
+}
+
+.head-lift{
+    -webkit-animation: head-lift 500ms ease infinite both;
+    animation: head-lift 500ms ease infinite both;
+}
+
+.hat-jiggle{
+    -webkit-animation: hat-jiggle 500ms ease infinite both;
+    animation: hat-jiggle 500ms ease infinite both;
+}
+
+.shade-translate{
+    -webkit-animation: shade-translate 500ms ease infinite both;
+    animation: shade-translate 500ms ease infinite both;
+}
+
+.shade-scale{
+    -webkit-animation: shade-scale 500ms ease infinite both;
+    animation: shade-scale 500ms ease infinite both;
+}
+
+.headphone-jiggle{
+    -webkit-animation: headphone-jiggle 500ms ease infinite both;
+    animation: headphone-jiggle 500ms ease infinite both;
+}
+
+@keyframes upper-bite {
+    0% {-webkit-transform:translateY(0px); transform:translateY(0px);}
+    60% {-webkit-transform:translateY(-13px); transform:translateY(-13px);}
+    75% {-webkit-transform:translateY(0px); transform:translateY(5px);}   
+    100% {-webkit-transform:translateY(0px); transform:translateY(0px);}    
+     
+}
+
+@keyframes lower-bite {
+    0% {-webkit-transform:translateY(0px); transform:translateY(0px);}
+    60% {-webkit-transform:translateY(2px); transform:translateY(2px);}
+    75% {-webkit-transform:translateY(0px); transform:translateY(0px);}    
+}
+
+@keyframes head-lift {
+    10% {-webkit-transform:translateY(0px); transform:translateY(0px);}
+    60% {-webkit-transform:translateY(-12px); transform:translateY(-12px);}
+    75% {-webkit-transform:translateY(0px); transform:translateY(0px);}    
+}
+
+@keyframes hat-jiggle{
+    10% {-webkit-transform:translateY(0px); transform:translateY(0px);}
+    60% {-webkit-transform:translateY(-10px); transform:translateY(-10px);}
+    75% {-webkit-transform:translateY(3px); transform:translateY(3px);}          
+    100% {-webkit-transform:translateY(0px); transform:translateY(0px);}      
+}
+
+@keyframes shade-translate {
+    10% {-webkit-transform:translateY(0px)scaleY(1.0); transform:translateY(0px)scaleY(1.0);}
+    60% {-webkit-transform:translateY(-18px)scaleY(1.15); transform:translateY(-18px)scaleY(1.15);}
+    75% {-webkit-transform:translateY(0px)scaleY(1.0); transform:translateY(0px)scaleY(1.0);}    
+}
+
+@keyframes headphone-jiggle {
+    10% {-webkit-transform:translateY(0px)rotate(0deg); transform:translateY(0px)rotate(0deg);}
+    60% {-webkit-transform:translateY(-0.5px)rotate(0.1deg); transform:translateY(-0.5px)rotate(0.1deg);}
+    75% {-webkit-transform:translateY(0.5px)rotate(-0.1deg); transform:translateY(0.5px)rotate(-0.1deg);}          
+    100% {-webkit-transform:translateY(0px)rotate(0deg); transform:translateY(0px)rotate(0deg);}   
+}
+
+// @keyframes shade-scale{
+//     10% {-webkit-transform:scaleY(1.0); transform:scaleY(1.0);}
+//     60% {-webkit-transform:scaleY(1.2); transform:scaleY(1.2);}
+//     80% {-webkit-transform:scaleY(1.0); transform:scaleY(1.0);}  
+// }
+
+/*******/
