--- a/app/templates/app/play.hbs
+++ b/app/templates/app/play.hbs
@@ -1,1 +1,3 @@
 <div id="route-header">Play</div>
+
+<iframe src="http://www.mwagar.com/REMemberance/" class="game-iframe" style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="700px" width="700px"></iframe>
