--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -244,6 +244,10 @@ body {
     background: linear-gradient(135deg, #92FF63 0%, #71A500 100%);           
 }
 
+.jswanick_color{
+    background: linear-gradient(135deg, #6900ff 0%, #99ccff 100%);
+}
+
 /*******************/
 
 
