--- a/app/templates/app/blog.hbs
+++ b/app/templates/app/blog.hbs
@@ -1,3 +1,35 @@
-<div id="route-header">Blog</div>
 
-<div>blog</div>
+
+{{#paper-grid-list
+        cols="1 sm-2 md-4 gt-md-4"
+        rowHeight="gt-md-1:1 2:2"
+        gutter="12px gt-sm-16px" as |grid|}}
+
+        {{#each posts as |post|}}
+            {{#if post.showDisplay}}
+                {{#paper-button raised=true mini=true primary=true onClick=(action "togglePost" post)}}{{paper-icon "keyboard backspace"}}{{/paper-button}}
+                <h1>{{post.title}}</h1>
+                {{#each post.text as |t|}}
+                <div class="flex-80">{{t}}</div>
+                <br>
+                {{/each}}
+            {{else}}
+            <div id="route-header">Blog</div>
+            {{#grid.tile as |tile|}}
+            {{#paper-button class="profile-button" onClick=(action "togglePost" post) raised=false}}
+
+            {{/paper-button}}
+            <img src={{post.pic}} class="fit-image">
+            {{#tile.footer class="grid-tile-footer"}}
+                <div class="layout-row flex">
+                    <div class="flex-initial icon-padding">{{paper-icon post.icon class="white" size=36}}</div>
+                    <div class="layout-column flex">
+                        <div class="flex"><h3>{{post.title}}</h3></div>
+                    </div>
+                </div>
+            {{/tile.footer}}
+            
+            {{/grid.tile}}
+            {{/if}}
+        {{/each}}
+    {{/paper-grid-list}}
