--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,10 +1,11 @@
 // app.scss
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Neuton);
 
 // Define desired color palettes.
 $primary: "red";
 $accent: "deep-purple";
-$warn: "pink";
+$warn: "blue-grey";
 
 // If desired, import the palettes and modify to your liking.
 @import "color-palette";
@@ -21,17 +22,28 @@ body {
   background-color: #101010;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
-  overflow-y: hidden;
   z-index:-100;
 }
 
+
+.fixed-nav-bar{
+    position: fixed;
+    height: 100%;
+    width: 200px;
+}
+
 .full-page{
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
 }
 
 
 .white{
     color: white !important;
+}
+
+.page-padding{
+    padding: 10px 30px;
 }
 
 // a.md-active{
@@ -81,9 +93,8 @@ body {
 }
 
 .content-background{
-    overflow-y: auto;
-    overflow-x: hidden;
     background-color:#bbb;
+    padding-left:200px;
 }
 
 .logo-head{
@@ -525,10 +536,15 @@ object{
 }
 
 .doc-fullscreen{
-    max-width:1000px;
-    width:100vw;
+    // max-width:1000px;
+    width:1300px;
     height:80vh;
     overflow:hidden;
+
+    iframe{
+        max-width: 1050px !important;
+        // width:1000px !important;
+    }
 }
 
 @media screen and (max-width: 599px) {
@@ -557,3 +573,72 @@ iframe.game-iframe{
     width: 100%;
     height: 70vh;
 }
+
+
+/*Landing page*/
+
+.landing-logo{
+    padding-top: 0.5em;
+    text-align: center;
+    font-size: 3em;
+    font-family: Colourbars;
+}
+
+.landing-logo-subhead{
+    padding-bottom: 0.5em;
+    text-align: center;
+    font-size: 1.5em;
+    font-family: Colourbars;
+}
+
+.landing-content{
+    padding: 20px 50px;
+}
+
+.landing-text{
+    padding: 10px 50px;
+}
+
+.hero-image{
+    background-image:url("images/rememberence_logo_5.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+    width:100%;
+    height: 65vh;
+}
+
+.landing-button{
+    text-align:center;
+    padding-top: 55vh;
+}
+
+.play-button{
+    background-color: #9a8c51 !important;
+    color: black !important;
+    padding: 5px 10px;
+    font-size: 1.25em;
+    box-shadow: 0 0px 10px 0 #172225 !important;
+}
+
+/*Play page*/
+
+.download-button{
+    padding-top:55vh;
+    text-align:center;
+}
+
+.play-title{
+    font-family: 'Neuton', sans-serif;
+    text-align: center;
+    font-size: 3em;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.play-subtitle{
+    font-family: 'Neuton', sans-serif;
+    text-align: center;
+    font-size: 1.5em;
+}
+
