--- a/app/templates/app/home.hbs
+++ b/app/templates/app/home.hbs
@@ -1,2 +1,23 @@
 {{!-- <div id="route-header">Main Page</div> --}}
 
+{{!-- <img src="assets/images/rememberence_logo_5.png" class="fit-image"> --}}
+
+<div class="hero-image">
+    <div class="landing-button">
+        {{#paper-button raised=true class="play-button" href=(href-to "app.play") onClick=(route-action "selectRoute" "app.play")}}Play The Game{{/paper-button}}
+    </div>
+
+</div>
+
+
+<div class="landing-content">
+
+    <div class="landing-logo">Off Brand Hell Games</div> 
+    <div class="landing-logo-subhead">A devilishly atypical game studio</div>
+
+    <div class="landing-text">As a troupe of nine game designers and developers at Drexel University, we, <b>Off Brand Hell Games</b>, are on a mission to create video games that invite excitement and wonder.</div>
+
+    <div class="landing-text">Our first game under development is <b>Rem</b>. You play as a young girl trapped in a comatose dreamscape. In this puzzling adventure, you must explore the hospital she fell asleep in, avoid nightmarish enemies, and collect mementos of her past. Will you be able to escape this coma? </div>
+
+
+</div>
