--- a/app/templates/app/play.hbs
+++ b/app/templates/app/play.hbs
@@ -1,3 +1,49 @@
-<div id="route-header">Play</div>
 
-<iframe src="http://www.mwagar.com/REMemberance/" class="game-iframe" style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="700px" width="700px"></iframe>
+
+
+<div class="hero-image">
+
+    <div class="layout-row flex">
+        <div class="landing-button flex">
+            {{#paper-button raised=true class="play-button" href=(href-to "app.web")}}Launch Web Build{{/paper-button}}
+        </div>
+        <div class="landing-button flex">
+            <a href="assets/builds/Rem_Windows.zip" download>            
+                {{#paper-button raised=true class="play-button"}}Download PC Build{{/paper-button}}
+            </a>
+        </div>
+    
+        <div class="landing-button flex">
+            <a href="assets/builds/Rem_Mac.zip" download>
+                {{#paper-button raised=true class="play-button"}}Download Mac Build{{/paper-button}}
+            </a>
+        </div>
+    </div>
+</div>
+
+
+<div class="landing-content">
+
+    {{!-- <div class="play-title">Rem</div>  --}}
+
+    <div class="play-subtitle">The Overview</div>
+
+    <div class="landing-text"> <b>Rem</b> is a treacherous flight through the strange dreamworld of a coma patient named Rem. As Rem, you must hide, look, and travel through walls as well as use your cunning to mislead and outsmart your pursuers to retrieve mementos containing your lost memories in hopes of gaining consciousness.</div>
+
+
+    <div class="play-subtitle">The Premise</div>
+
+    <div class="landing-text"> You wake up in the hospital bed, groggy and confused. Something is off. You feel light headed. In fact, your entire body feels as light as a feather. You step out of your room and explore the hospital, and out of nowhere a doctor with a heart monitor head comes charging at you. Without thinking, you dash through a wall. </div>
+        
+    <div class="landing-text"> What was that? Did I just go through a wall? </div>
+
+    <div class="landing-text"> On a table before you is a teddy bear from when you were a toddler. You pick up the bear and a whirlwind of emotions comes over you. You feel as though a piece of you is back to normal. In a heart beat, you see a pulse eminate around you. You hear those doctor monsters coming for you. You must find safety!</div> 
+
+    
+    <div class="play-subtitle">The Goal</div>
+    <div class="landing-text"> Your objective is to retrieve a memento and return it to your safe room. Along the way you must scout out for enemies, and strategically maneuver around them to get to the memento. Thankfully you are able to see through and travel through walls, making dodging a lot easier on the trip to the memento. However, on the trip back to the safe room, the memento can't travel through walls. This means Rem needs to not only maneuver around enemies, but lure and manipulate them into situations to make a clear path back to the safe room.</div>
+
+</div>
+
+
+{{!-- <iframe src="http://www.mwagar.com/REMemberance/" class="game-iframe" style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="700px" width="700px"></iframe> --}}
