--- a/app/templates/components/google-doc.hbs
+++ b/app/templates/components/google-doc.hbs
@@ -1,18 +1,18 @@
 <div class="center-iframe">
-    <iframe class="google-doc-iframe" src="https://docs.google.com/document/d/e/2PACX-1vRMZioH7GmoYdY5yabryIWk2rQnoiC4wva-PozTMZ74TeyweX1JFgMZmm_lbTO5GJWS00KMJWNG44AN/pub?embedded=true&rm=demo"></iframe>
+    <iframe class="google-doc-iframe" src={{iframe}}></iframe>
 </div>
 {{!--<a onClick={{action "fullscreen"}}>{{paper-icon "aspect ratio" size="48" class="doc-logo"}}</a>
 <a href="https://docs.google.com/document/d/1i1B3gqU-kZV7UnRoDYsrx8RmYy0XoVBqAI7DtCDLGmU/edit?usp=sharing"><img class="doc-logo" src="assets/images/google_docs.png"/></a>--}}
 
 
 {{#paper-button fab=true raised=true onClick=(action "fullscreen") class="doc-logo"}}{{paper-icon "aspect ratio" size="36"}}{{/paper-button}}
-{{#paper-button fab=true raised=true class="doc-logo"}}<a href="https://docs.google.com/document/d/1i1B3gqU-kZV7UnRoDYsrx8RmYy0XoVBqAI7DtCDLGmU/edit?usp=sharing"><img class="doc-image" src="assets/images/google_docs.png"/></a>{{/paper-button}}
+{{#paper-button fab=true raised=true class="doc-logo"}}<a href={{link}}><img class="doc-image" src="assets/images/google_docs.png"/></a>{{/paper-button}}
 
 {{#if showDialog}}
     {{#paper-dialog class="no-max-size" fullscreen=true onClose=(action "closeDialog") parent='#document' clickOutsideToClose=true}}
         {{#paper-toolbar}}
         {{#paper-toolbar-tools}}
-          <h2>Game Design Document</h2>
+          <h2>{{title}}</h2>
           <span class="flex"></span>
           {{#paper-button iconButton=true onClick=(action "closeDialog")}}{{paper-icon icon="close"}}{{/paper-button}}
         {{/paper-toolbar-tools}}
@@ -20,7 +20,7 @@
 
                 {{#paper-dialog-content class="no-padding doc-fullscreen"}}
                     <div class="center-iframe">
-                    <iframe class="google-doc-iframe" src="https://docs.google.com/document/d/e/2PACX-1vRMZioH7GmoYdY5yabryIWk2rQnoiC4wva-PozTMZ74TeyweX1JFgMZmm_lbTO5GJWS00KMJWNG44AN/pub?embedded=true&rm=demo"></iframe>
+                    <iframe class="google-doc-iframe" src={{iframe}}></iframe>
                     </div>
                 {{/paper-dialog-content}}
         
