Updated links on play page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -618,7 +618,11 @@ iframe.game-iframe{
     color: black !important;
     padding: 5px 10px;
     font-size: 1.25em;
-    box-shadow: 0 0px 10px 0 #172225 !important;
+    box-shadow: 0 0px 10px 0 #172225 !important;   
+}
+
+.text-center{
+    text-align: center;
 }
 
 /*Play page*/
