--- a/app/templates/app/play.hbs
+++ b/app/templates/app/play.hbs
@@ -25,6 +25,17 @@
 <div class="landing-content">
 
     {{!-- <div class="play-title">Rem</div>  --}}
+    <div class="play-subtitle">TAKE OUR SURVEY!</div>
+
+    <div class="landing-text text-center">After you finish playing this game, please give your feedback. Click the Take Survey button!</div>
+    <div class="layout-row flex layout-align-center">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdRBGiWzxC9Tg1bukkarTz7ndoVEtETW9_QL4Q7qMv5JURbTA/viewform">
+        
+        {{#paper-button raised=true class="play-button"}}Take Survey{{/paper-button}}
+        </a>
+    </div>
+
+    <br>
 
     <div class="play-subtitle">The Overview</div>
 
